k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: billiards-backend
  labels:
    name: billiards-backend
